syntax = "proto3";

package internal_grpc;
option go_package = "./;pb";

service Monitoring{
  rpc GetStatisticProto(GetStatistic) returns (StatisticResponse);
}

message TopTalker{
  int64 ID = 1;
  string name = 2;
  float load = 3;
}

message Statistic {
  float load = 1;
  float cpu =2;
  map<string, float> disk = 3;
  map<string, int64> net = 4;
  repeated TopTalker top_talker = 5;
}

message GetStatistic{
  int64 statsInterval = 1;
}

message StatisticResponse{
  Statistic statistic = 1;
}